bug fix & improvement

--- a/agavedancer/environments/development.yml
+++ b/agavedancer/environments/development.yml
@@ -50,8 +50,8 @@ datastore:
     home: '/iplant/home'
     path: 'shared'
   __public__:
-    system: '1970491483740115431-242ac113-0001-007'
-    home: ''
+    system: 'data.sciapps.org'
+    home: '/halcott'
     path: 'example_data'
   __system__:
     system: ''
@@ -61,6 +61,7 @@ datastore:
     system: '1970491483740115431-242ac113-0001-007'
     home: ''
     path: 'example_data'
+public_datastore_type: '__public__'
 uncompress_suffix: '.open.tar.gz'
 use_file_server: 1
 irodsEnvFile: '/usr/share/httpd/irodsEnv'
