--- a/agavedancer/environments/development.yml
+++ b/agavedancer/environments/development.yml
@@ -50,7 +50,7 @@ datastore:
     home: '/iplant/home'
     path: 'shared'
   __public__:
-    system: 'data.sciapps.org'
+    system: '1970491483740115431-242ac113-0001-007'
     home: '/halcott'
     path: 'example_data'
   __system__:
