--- a/agavedancer/environments/development.yml
+++ b/agavedancer/environments/development.yml
@@ -30,9 +30,9 @@ auto_reload: 0
 # development config
 agave_config: ".agave"
 host_url: "https://dev1.sciapps.org"
-archive_system: 'brie.cshl.edu'
-archive_home: '/agave_data'
-archive_path: 'results'
+archive_system: 'data.iplantcollaborative.org'
+archive_home: '/iplant/home'
+archive_path: '__user__/sci_data'
 input_system: 'brie.cshl.edu'
 input_home: '/agave_data'
 input_path: 'inputs'
