--- a/agavedancer/environments/production.yml
+++ b/agavedancer/environments/production.yml
@@ -45,7 +45,7 @@ datastore:
     home: '/iplant/home'
     path: 'shared'
   __public__:
-    system: 'data.sciapps.org'
+    system: 'sciapps.org'
     home: '/agave_data'
     path: 'example_data'
   __system__:
