minor changes; direct url of output file in output folder; no upload dir if no upload file

--- a/agavedancer/environments/development.yml
+++ b/agavedancer/environments/development.yml
@@ -51,7 +51,7 @@ datastore:
     path: 'shared'
   __public__:
     system: 'sciapps.org'
-    home: '/halcott'
+    home: '/agave_data'
     path: 'example_data'
   __system__:
     system: ''
