--- a/agavedancer/environments/production.yml
+++ b/agavedancer/environments/production.yml
@@ -28,7 +28,7 @@ host_url: "https://www.sciapps.org"
 archive_system: 'halcott.cshl.edu'
 archive_home: '/agave_data'
 archive_path: 'results'
-input_system: 'halcott.cshl.edu'
+input_system: 'brebiou.cshl.edu'
 input_home: '/agave_data'
 input_path: 'inputs'
 email: 'noreply@sciapps.org'
