--- a/agavedancer/public/assets/agaveAppsList.json
+++ b/agavedancer/public/assets/agaveAppsList.json
@@ -263,5 +263,113 @@
         "name": "CloudSTRUCTURE", 
     	"tags": ["Clustering"], 
         "version": "2.3.4"
-    }
+    },
+  {
+    "tags": [
+      "Beta"
+    ],
+    "id": "intersectBed-2.26.0",
+    "label": "intersectBed",
+    "name": "intersectBed",
+    "version": "2.26.0"
+  },
+  {
+    "tags": [
+      "Beta"
+    ],
+    "id": "Picard_MarkDupcates-2.7.0",
+    "label": "Picard_MarkDup",
+    "name": "Picard_MarkDupcates",
+    "version": "2.7.0"
+  },
+  {
+    "tags": [
+      "Beta"
+    ],
+    "id": "HOMER_makeTagDir-4.8.3",
+    "label": "HOMER_makeTagDir",
+    "name": "HOMER_makeTagDir",
+    "version": "4.8.3"
+  },
+  {
+    "tags": [
+      "Beta"
+    ],
+    "id": "HOMER_findPeaks-4.8.3",
+    "label": "HOMER_findPeaks",
+    "name": "HOMER_findPeaks",
+    "version": "4.8.3"
+  },
+  {
+    "tags": [
+      "Beta"
+    ],
+    "id": "HOMER_annoPeaks-4.8.3",
+    "label": "HOMER_annoPeaks",
+    "name": "HOMER_annoPeaks",
+    "version": "4.8.3"
+  },
+  {
+    "tags": [
+      "Beta"
+    ],
+    "id": "BWA_index_mem-0.7.10",
+    "label": "BWA-index-mem",
+    "name": "BWA_index_mem",
+    "version": "0.7.10"
+  },
+  {
+    "tags": [
+      "Beta"
+    ],
+    "id": "Ballgown-2.6.0",
+    "label": "Ballgown-2.6.0",
+    "name": "Ballgown",
+    "version": "2.6.0"
+  },
+  {
+    "tags": [
+      "Beta"
+    ],
+    "id": "Taco-merge-0.6.3",
+    "label": "Taco-merge-v0.6.3",
+    "name": "Taco-merge",
+    "version": "0.6.3"
+  },
+  {
+    "tags": [
+      "Beta"
+    ],
+    "id": "StringTie-gtftobigbed-1.0",
+    "label": "StringTie-gtftobigbed-1.0",
+    "name": "StringTie-gtftobigbed",
+    "version": "1.0"
+  },
+  {
+    "tags": [
+      "Beta"
+    ],
+    "id": "StringTie-merge-1.3.1",
+    "label": "StringTie-merge-1.3.1",
+    "name": "StringTie-merge",
+    "version": "1.3.1"
+  },
+  {
+    "tags": [
+      "Beta"
+    ],
+    "id": "StringTie-1.3.1",
+    "label": "StringTie-1.3.1",
+    "name": "StringTie",
+    "version": "1.3.1"
+  },
+  {
+    "tags": [
+      "Beta"
+    ],
+    "id": "star_index_align-2.5.2",
+    "label": "Star-index-align",
+    "name": "star_index_align",
+    "version": "2.5.2"
+  }
 ]
