Added new app BWA_index_mem-0.7.13

--- a/agavedancer/environments/production.yml
+++ b/agavedancer/environments/production.yml
@@ -24,7 +24,7 @@ route_cache: 1
 
 # production config
 agave_config: ".agave"
-host_url: "https://www.sciapps.org"
+host_url: "https://de.sciapps.org"
 archive_system: 'halcott.cshl.edu'
 archive_home: '/agave_data'
 archive_path: 'results'
