--- a/agavedancer/public/assets/agaveAppsList.json
+++ b/agavedancer/public/assets/agaveAppsList.json
@@ -318,6 +318,15 @@
     "name": "BWA_index_mem",
     "version": "0.7.13"
   },
+    {
+    "tags": [
+      "Beta"
+    ],
+    "id": "FastQC-0.11.5",
+    "label": "FastQC",
+    "name": "FastQC",
+    "version": "0.11.5"
+  },
   {
     "tags": [
       "Beta"
