changed datastore types

--- a/agavedancer/environments/development.yml
+++ b/agavedancer/environments/development.yml
@@ -41,14 +41,14 @@ upload_suffix: ".upload"
 wf_step_prefix: 'wf_step_'
 maxRunTime: "96:00:00"
 datastore:
-  __user__: 
-    system: 'data.iplantcollaborative.org'
-    home: '/iplant/home'
-    path: '__user__/sci_data'
-  __shared__:
-    system: 'data.iplantcollaborative.org'
-    home: '/iplant/home'
-    path: 'shared'
+  __sorghumDB__: 
+    system: 'sciapps.org'
+    home: '/agave_data'
+    path: 'data/sorghum'
+  __maizecode__:
+    system: 'sciapps.org'
+    home: '/agave_data'
+    path: 'data/maize'
   __public__:
     system: 'sciapps.org'
     home: '/agave_data'
@@ -62,6 +62,7 @@ datastore:
     home: ''
     path: 'example_data'
 public_datastore_type: '__public__'
+datastore_types: ['sorghumDB', 'maizecode', 'public']
 uncompress_suffix: '.open.tar.gz'
 use_file_server: 1
 irodsEnvFile: '/usr/share/httpd/irodsEnv'
