--- a/agavedancer/environments/production.yml
+++ b/agavedancer/environments/production.yml
@@ -61,7 +61,7 @@ datastore:
     home: ''
     path: 'example_data'
 public_datastore_type: '__exampleData__'
-datastore_types: ['CyVerse', 'sorghumDB', 'maizecode', 'exampleData']
+datastore_types: ['CyVerse', 'sorghumDB', 'MaizeCODE', 'exampleData']
 uncompress_suffix: '.open.tar.gz'
 use_file_server: 1
 irodsEnvFile: '/usr/share/httpd/irodsEnv'
