--- a/agavedancer/environments/production.yml
+++ b/agavedancer/environments/production.yml
@@ -25,9 +25,9 @@ route_cache: 1
 # production config
 agave_config: ".agave"
 host_url: "https://www.sciapps.org"
-archive_system: 'halcott.cshl.edu'
-archive_home: '/agave_data'
-archive_path: 'results'
+archive_system: 'data.iplantcollaborative.org'
+archive_home: '/iplant/home'
+archive_path: '__user__/archive/jobs'
 input_system: 'brebiou.cshl.edu'
 input_home: '/agave_data'
 input_path: 'inputs'
@@ -36,15 +36,19 @@ upload_suffix: ".upload"
 wf_step_prefix: 'wf_step_'
 maxRunTime: "96:00:00"
 datastore:
-  __user__: 
+  __CyVerseUserData__: 
     system: 'data.iplantcollaborative.org'
     home: '/iplant/home'
-    path: '__user__/sci_data'
-  __shared__:
+    path: '__user__'
+  __CyVerseSharedData__:
     system: 'data.iplantcollaborative.org'
     home: '/iplant/home'
     path: 'shared'
-  __public__:
+  __ArchivedJobs__: 
+    system: 'data.iplantcollaborative.org'
+    home: '/iplant/home'
+    path: '__user__/archive/jobs'
+  __exampleData__:
     system: 'sciapps.org'
     home: '/agave_data'
     path: 'example_data'
@@ -52,11 +56,6 @@ datastore:
     system: ''
     home: ''
     path: ''
-  __output__:
-    system: '1970491483740115431-242ac113-0001-007'
-    home: ''
-    path: 'example_data'
-public_datastore_type: '__public__'
+datastore_types: ['ArchivedJobs', 'CyVerseSharedData', 'CyVerseUserData', 'exampleData']
 uncompress_suffix: '.open.tar.gz'
-use_file_server: 1
 irodsEnvFile: '/usr/share/httpd/irodsEnv'
