--- a/agavedancer/config.yml
+++ b/agavedancer/config.yml
@@ -56,10 +56,5 @@ plugins:
     on_connect_do: ["SET NAMES 'utf8'", "SET CHARACTER SET 'utf8'"]
 
 output_url:
-  brie.cshl.edu: 'https://dev2.sciapps.org'
-  brebiou.cshl.edu: 'https://data.sciapps.org'
-  halcott.cshl.edu: 'https://data.sciapps.org'
-  dev2.sciapps.org: 'https://dev2.sciapps.org'
-  data.sciapps.org: 'https://data.sciapps.org'
-  sciapps.org: 'https://data.sciapps.org'
-  de.sciapps.org: 'https://data.sciapps.org'
+  sciapps.org: 'https://data.sciapps.org/__path__'
+  data.iplantcollaborative.org: 'https://agave.iplantc.org/files/v2/download/__owner__/system/__system__/__path__'
