--- a/wrappers/platypus_workflow/platypus.template
+++ b/wrappers/platypus_workflow/platypus.template
@@ -15,21 +15,11 @@
 
 # The bam file to analyze - required
 # assume directly fed input is file all the time
-if [ -d ${inputBam} ]; then
+if [ -d ${inputBam} -a $(ls ${inputBam} | wc -l) == 1 ]; then
 	inp_name=$(ls ${inputBam})
-	#inp_array=(${inp_name////})
-	#inp_name=${inp_array[0]}
-	# deal with situation when inputBam and inp_name are the same
-	if [ "$inputBam" == "$inp_name" ]; then
-		mv ${inputBam}/${inp_name} temp
-		rm -rf ${inputBam}
-		inputBam=${inp_name}
-		mv temp $inputBam
-	else
-		mv ${inputBam}/${inp_name} .
-		rm -rf ${inputBam}
-		inputBam=${inp_name}
-	fi
+	mv ${inputBam}/${inp_name} .
+	rm -rf ${inputBam}
+	inputBam=${inp_name}
 fi
 
 # The reference files.  - required
@@ -37,21 +27,11 @@ fi
 # Warning - bundle must be have common base name as contents
 # Warning - contents must include .dict   .fa    .fa.fai    .fa.{amb, ann, bwt, pac, sa}
 # assume directly fed input is file all the time
-if [ -d ${reference_bundle} ]; then
+if [ -d ${reference_bundle} -a $(ls ${reference_bundle} | wc -l) == 1 ]; then
 	inp_name=$(ls ${reference_bundle})
-	#inp_array=(${inp_name////})
-	#inp_name=${inp_array[0]}
-        # deal with situation when reference_bundle and inp_name are the same
-        if [ "$reference_bundle" == "$inp_name" ]; then
-		mv ${reference_bundle}/${inp_name} temp
-		rm -rf ${reference_bundle}
-		reference_bundle=${inp_name}
-		mv temp $reference_bundle
-	else
-		mv ${reference_bundle}/${inp_name} .
-		rm -rf ${reference_bundle}
-		reference_bundle=${inp_name}
-	fi
+	mv ${reference_bundle}/${inp_name} .
+	rm -rf ${reference_bundle}
+	reference_bundle=${inp_name}
 fi
 
 # number of cores to use per function
