--- a/agavedancer/environments/development.yml
+++ b/agavedancer/environments/development.yml
@@ -40,6 +40,7 @@ email: 'noreply@sciapps.org'
 upload_suffix: ".upload"
 wf_step_prefix: 'wf_step_'
 maxRunTime: "96:00:00"
+defaultUser: 'maizecode'
 datastore:
   __CyVerse__:
     system: 'data.iplantcollaborative.org'
