change output to datacommons

--- a/agavedancer/environments/development.yml
+++ b/agavedancer/environments/development.yml
@@ -32,7 +32,7 @@ agave_config: ".agave"
 host_url: "https://dev1.sciapps.org"
 archive_system: 'data.iplantcollaborative.org'
 archive_home: '/iplant/home'
-archive_path: '__user__/archive/jobs'
+archive_path: '__user__/sci_data/results/'
 input_system: 'brie.cshl.edu'
 input_home: '/agave_data'
 input_path: 'inputs'
