--- a/agavedancer/config.yml
+++ b/agavedancer/config.yml
@@ -57,4 +57,4 @@ plugins:
 
 output_url:
   sciapps.org: 'https://data.sciapps.org/__path__'
-  data.iplantcollaborative.org: 'https://agave.iplantc.org/files/v2/download/__owner__/system/__system__/__path__'
+  data.iplantcollaborative.org: 'http://datacommons.cyverse.org/browse/__home__/__path__'
