allow loading curated apps and workflow without login

--- a/agavedancer/environments/production.yml
+++ b/agavedancer/environments/production.yml
@@ -56,3 +56,4 @@ datastore:
 datastore_types: ['recent_jobs', 'shared', 'home']
 uncompress_suffix: '.open.tar.gz'
 irodsEnvFile: '/usr/share/httpd/irodsEnv'
+defaultAppsList: 'public/assets/agaveAppsList.json'
