--- a/agavedancer/environments/development.yml
+++ b/agavedancer/environments/development.yml
@@ -60,3 +60,4 @@ datastore:
 datastore_types: ['recent_jobs', 'shared', 'home']
 uncompress_suffix: '.open.tar.gz'
 irodsEnvFile: '/usr/share/httpd/irodsEnv'
+defaultAppsList: 'public/assets/agaveAppsList.json'
