--- a/agavedancer/environments/development.yml
+++ b/agavedancer/environments/development.yml
@@ -61,3 +61,4 @@ datastore_types: ['recent_jobs', 'shared', 'home']
 uncompress_suffix: '.open.tar.gz'
 irodsEnvFile: '/usr/share/httpd/irodsEnv'
 defaultAppsList: 'public/assets/agaveAppsList.json'
+queue_length: 3
