fix job loading of workflow visualization

--- a/agavedancer/environments/development.yml
+++ b/agavedancer/environments/development.yml
@@ -56,5 +56,6 @@ datastore:
 datastore_types: ['recent_jobs', 'shared', 'home']
 uncompress_suffix: '.open.tar.gz'
 irodsEnvFile: '/usr/share/httpd/irodsEnv'
+appsLocalCache: 0
 defaultAppsList: 'public/assets/agaveAppsList.json'
 queue_length: 3
