--- a/agavedancer/environments/production.yml
+++ b/agavedancer/environments/production.yml
@@ -51,4 +51,6 @@ datastore:
 datastore_types: ['recent_jobs', 'shared', 'home']
 uncompress_suffix: '.open.tar.gz'
 irodsEnvFile: '/usr/share/httpd/irodsEnv'
+appsLocalCache: 0
 defaultAppsList: 'public/assets/agaveAppsList.json'
+queue_length: 3
