fix job loading of workflow visualization

--- a/agavedancer/environments/development.yml
+++ b/agavedancer/environments/development.yml
@@ -29,13 +29,9 @@ auto_reload: 0
 
 # development config
 agave_config: ".agave"
-host_url: "https://de.sciapps.org"
 archive_system: 'data.iplantcollaborative.org'
 archive_home: '/iplant/home'
 archive_path: '__user__/sci_data/results'
-input_system: 'brie.cshl.edu'
-input_home: '/agave_data'
-input_path: 'inputs'
 email: 'noreply@sciapps.org'
 wf_step_prefix: 'wf_step_'
 maxRunTime: "96:00:00"
@@ -60,5 +56,6 @@ datastore:
 datastore_types: ['recent_jobs', 'shared', 'home']
 uncompress_suffix: '.open.tar.gz'
 irodsEnvFile: '/usr/share/httpd/irodsEnv'
+appsLocalCache: 0
 defaultAppsList: 'public/assets/agaveAppsList.json'
 queue_length: 3
