improving apps list

--- a/agavedancer/environments/production.yml
+++ b/agavedancer/environments/production.yml
@@ -52,5 +52,6 @@ datastore_types: ['recent_jobs', 'shared', 'home']
 uncompress_suffix: '.open.tar.gz'
 irodsEnvFile: '/usr/share/httpd/irodsEnv'
 appsLocalCache: 0
+appsListMode: ['local', 'remote']
 defaultAppsList: 'public/assets/agaveAppsList.json'
 queue_length: 3
