--- a/agavedancer/environments/development.yml
+++ b/agavedancer/environments/development.yml
@@ -57,6 +57,6 @@ datastore_types: ['recent_jobs', 'shared', 'home']
 uncompress_suffix: '.open.tar.gz'
 irodsEnvFile: '/usr/share/httpd/irodsEnv'
 appsLocalCache: 0
-appsListMode: ['local', 'remote']
+appsListMode: ['local']
 defaultAppsList: 'public/assets/agaveAppsList.json'
 queue_length: 3
