update production config

--- a/agavedancer/environments/production.yml
+++ b/agavedancer/environments/production.yml
@@ -44,6 +44,10 @@ datastore:
     system: 'data.iplantcollaborative.org'
     home: '/iplant/home'
     path: '__user__/sci_data/results'
+  __visual__:
+    system: 'halcott.cshl.edu'
+    home: '/agave_data'
+    path: 'results'
   __system__:
     system: ''
     home: ''
@@ -52,6 +56,7 @@ datastore_types: ['recent_jobs', 'shared', 'home']
 uncompress_suffix: '.open.tar.gz'
 irodsEnvFile: '/usr/share/httpd/irodsEnv'
 appsLocalCache: 0
-appsListMode: ['local']
+appsListMode: ['local', 'remote']
 defaultAppsList: 'public/assets/agaveAppsList.json'
 queue_length: 3
+visual_file_types: ['.html', '.plot']
